[mgpu][integr][2/n] Vulkan/GL Integration prototype, applying review comments

--- a/aten/src/ATen/CMakeLists.txt
+++ b/aten/src/ATen/CMakeLists.txt
@@ -164,9 +164,9 @@ if(LAPACK_FOUND)
   endif()
 endif(LAPACK_FOUND)
 
-IF (USE_VULKANGL) 
-  list(APPEND ATen_VULKANGL_DEPENDENCY_LIBS EGL GLESv3)
-ENDIF()
+if(USE_GLES) 
+  list(APPEND ATen_GLES_DEPENDENCY_LIBGS EGL GLESv3)
+endif(USE_GLES)
 
 IF (UNIX AND NOT APPLE)
    include(CheckLibraryExists)
@@ -397,4 +397,4 @@ set(ATen_HIP_INCLUDE ${ATen_HIP_INCLUDE} PARENT_SCOPE)
 set(ATen_CPU_DEPENDENCY_LIBS ${ATen_CPU_DEPENDENCY_LIBS} PARENT_SCOPE)
 set(ATen_CUDA_DEPENDENCY_LIBS ${ATen_CUDA_DEPENDENCY_LIBS} PARENT_SCOPE)
 set(ATen_HIP_DEPENDENCY_LIBS ${ATen_HIP_DEPENDENCY_LIBS} PARENT_SCOPE)
-set(ATen_VULKANGL_DEPENDENCY_LIBS ${ATen_VULKANGL_DEPENDENCY_LIBS} PARENT_SCOPE)
+set(ATen_GLES_DEPENDENCY_LIBGS ${ATen_GLES_DEPENDENCY_LIBGS} PARENT_SCOPE)
