--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -187,8 +187,8 @@ option(USE_SNPE "Use Qualcomm's SNPE library" OFF)
 option(USE_SYSTEM_EIGEN_INSTALL
     "Use system Eigen instead of the one under third_party" OFF)
 option(USE_TENSORRT "Using Nvidia TensorRT library" OFF)
-option(USE_VULKAN "Use Vulkan GPU backend" ON)
-option(USE_VULKANGL "Use VulkanGL GPU backend" OFF)
+option(USE_VULKAN "Use Vulkan GPU backend" OFF)
+option(USE_GLES "Use GLES GPU backend" ON)
 option(USE_VULKAN_SHADERC_RUNTIME "Use Vulkan Shader compilation runtime(Needs shaderc lib)" OFF)
 option(USE_XNNPACK "Use XNNPACK" ON)
 option(USE_ZMQ "Use ZMQ" OFF)
@@ -441,12 +441,15 @@ endif()
 
 if(USE_VULKAN)
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DUSE_VULKAN")
+  set(USE_GLES OFF)
 endif()
-if(USE_VULKANGL)
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DUSE_VULKANGL")
+
+if(USE_GLES)
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DUSE_GLES")
 endif()
-if(USE_VULKAN_SHADERC_RUNTIME)
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DUSE_VULKAN_SHADERC_RUNTIME")
+
+if(USE_VULKAN_GLES_SHADERC_RUNTIME)
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DUSE_VULKAN_GLES_SHADERC_RUNTIME")
 endif()
 
 # ---[ Whitelist file if whitelist is specified
